RESOLVED FIXED171338
RTL: recent searches popover is displayed in incorrect location
https://bugs.webkit.org/show_bug.cgi?id=171338
Summary RTL: recent searches popover is displayed in incorrect location
alan
Reported 2017-04-26 13:19:53 PDT
Attachments
Patch (6.75 KB, patch)
2017-04-26 13:27 PDT, alan
no flags
alan
Comment 1 2017-04-26 13:27:04 PDT
WebKit Commit Bot
Comment 2 2017-04-26 13:52:18 PDT
Comment on attachment 308279 [details] Patch Clearing flags on attachment: 308279 Committed r215830: <http://trac.webkit.org/changeset/215830>
WebKit Commit Bot
Comment 3 2017-04-26 13:52:20 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 4 2017-04-26 14:56:48 PDT
Comment on attachment 308279 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=308279&action=review > Source/WebCore/rendering/RenderSearchField.cpp:138 > + FloatPoint absTopLeft = localToAbsolute(FloatPoint(), UseTransforms); > + IntRect absBounds = absoluteBoundingBoxRectIgnoringTransforms(); This is pretty confusing. Why ignore transforms for one but not the other? Did you test iframes?
Note You need to log in before you can comment on or make changes to this bug.