RTL: recent searches popover is displayed in incorrect location https://bugs.webkit.org/show_bug.cgi?id=171338 <rdar://problem/31377807>

Reviewed by Dean Jackson.

Source/WebCore:

Compute the absolute coordinates for the popup the same way we do for the select dropdown.

* rendering/RenderSearchField.cpp:
(WebCore::RenderSearchField::showPopup):

Source/WebKit/mac:

Add RTL support for the pop-under branch.

* WebCoreSupport/PopupMenuMac.mm:
(PopupMenuMac::show):

Source/WebKit2:

Add RTL support for the pop-under branch.

* UIProcess/mac/WebPopupMenuProxyMac.mm:
(WebKit::WebPopupMenuProxyMac::showPopupMenu):


Canonical link: https://commits.webkit.org/188227@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215830 268f45cc-cd09-0410-ab3c-d52691b4dbfc